--- a/treasue hunt/treasurehunt.css
+++ b/treasue hunt/treasurehunt.css
@@ -1,15 +1,10 @@
-td{
-	border: 2px solid #333;
-	height: 100px;
-	width: 100px;
+.container{
 	text-align: center;
-	vertical-align: middle;
 	font-family: "Comic Sans MS";
-	font-size: 70px;
-	cursor: pointer;
+	font-size: 30px;
+	color:   #ffffff;
+	background-image: url("Map.jpg");
+	background-position: center;
+    background-repeat: no-repeat;
 }
-table{
-	border-collapse: collapse;
-	position: absolute;
-	top:50px;
-}
+
