--- a/treasue hunt/treasurehunt.css
+++ b/treasue hunt/treasurehunt.css
@@ -1,10 +1,15 @@
-.container{
+.container {
 	text-align: center;
-	font-family: "Comic Sans MS";
+	font-family: "Verdana";
 	font-size: 30px;
 	color:   #ffffff;
 	background-image: url("Map.jpg");
 	background-position: center;
     background-repeat: no-repeat;
 }
-
+a {
+	font-family: "Verdana";
+	font-size: 30px;
+	color: #000000;
+	font-style: normal;
+}
